# opensnipping

./: LICENSE  README.md
.github/: README.md  copilot-instructions.md
.github/agents/: engineer.agent.md  planner.agent.md  pre-commit.agent.md  refactor.agent.md
.github/prompts/: new-project.prompt.md  self-improve.prompt.md  self.prompt.md  verify-ux.prompt.md  work-on-next.prompt.md
.github/skills/tauri-contract/: SKILL.md
.github/skills/tauri-mcp-bridge/: SKILL.md
opensnipping/: .gitignore  contract.surface.md  package-lock.json  package.json  plan.md  refactor.plan.md  spec.md
opensnipping/archive/: README.md  refactor.plan.md
opensnipping/scripts/: check-loc.sh  loc.allowlist.tsv
opensnipping/src/: App.css  App.test.tsx  App.tsx  types.ts
opensnipping/src-tauri/: Cargo.toml  tauri.conf.json
opensnipping/src-tauri/src/: config.rs  events.rs  lib.rs  main.rs  state.rs
opensnipping/src-tauri/src/capture/: fake.rs  linux.rs  mod.rs
opensnipping/src-tauri/src/capture/fake/: README.md  backend.rs  mod.rs
opensnipping/src-tauri/src/capture/fake/tests/: mod.rs  recording.rs  screenshot.rs  selection.rs
opensnipping/src-tauri/src/capture/linux/: README.md  backend.rs  encoding.rs  mod.rs  pipeline.rs  tests.rs
opensnipping/src-tauri/src/domain/: README.md
opensnipping/src-tauri/src/ipc/: README.md  commands.rs  emit.rs  errors.rs  mod.rs
opensnipping/src/components/: AnnotationCanvas.test.tsx  AnnotationCanvas.tsx
opensnipping/src/features/: README.md
opensnipping/src/hooks/: README.md
opensnipping/src/tauri/: README.md  commands.ts  (+2 more)
(+3 files in other folders)
