[package]
name = "opensnipping"
version = "0.1.0"
description = "A lightweight screen recorder and screenshot tool for Linux"
authors = ["Yummy Jars"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "opensnipping_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "rt", "macros"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

# Linux portal integration & capture (GStreamer + ashpd)
[target.'cfg(target_os = "linux")'.dependencies]
ashpd = { version = "0.10", features = ["tokio"] }
gstreamer = "0.23"
gstreamer-app = "0.23"
gstreamer-video = "0.23"

